--- a/Inicial/src/main/java/TelasPrincipais/Tela_Cliente.form
+++ b/Inicial/src/main/java/TelasPrincipais/Tela_Cliente.form
@@ -737,6 +737,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Limpar"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
