pequenos erros corrigido, implementação de menus

--- a/Inicial/src/main/java/TelasPrincipais/TelaDePagamento.form
+++ b/Inicial/src/main/java/TelasPrincipais/TelaDePagamento.form
@@ -122,15 +122,17 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="lblCpfCliente" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" alignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                           <Component id="lblCliente" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="txtCliente" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnBuscarCli" alignment="3" max="32767" attributes="0"/>
-                      <Component id="txtCpfCliente" alignment="3" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblCpfCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnBuscarCli" alignment="3" max="32767" attributes="0"/>
+                          <Component id="txtCpfCliente" alignment="3" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               </Group>
@@ -195,7 +197,7 @@
                       <Component id="lblTroco" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblValorRecebido" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="147" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
@@ -311,7 +313,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="boxTipoPag" pref="321" max="32767" attributes="0"/>
+                  <Component id="boxTipoPag" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
               </Group>
           </Group>
